Demo4:Explorepackage.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tolkan-demo-storefront",
+  "name": "tolkanStorefront",
   "version": "0.0.1",
   "license": "See license in LICENSE",
   "private": true,
