--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tolkanStorefront",
+  "name": "tolkanstorefront1",
   "version": "0.0.1",
   "license": "See license in LICENSE",
   "private": true,
@@ -28,7 +28,7 @@
     "chalk": "1.1.3",
     "commerce-sdk-isomorphic": "^1.5.2",
     "core-js": "2.4.0",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "cross-fetch": "^3.1.5",
     "focus-visible": "^5.2.0",
     "framer-motion": "^3.7.0",
